--- a/.sensiolabs.yml
+++ b/.sensiolabs.yml
@@ -4,6 +4,10 @@ exclude_patterns:
 
 rules:
 
+    # Do not check for code duplication.
+    php.duplicated_code:
+        enabled: false
+
     # We have a lot of POST actions which respond with JSON and should not redirect anywhere.
     symfony.controller.missing_redirect_after_post:
         enabled: false
