--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,17 +1,6 @@
-# Keep imports sorted alphabetically.
 imports:
-    - { resource: services/datatables.yml }
-    - { resource: services/forms.yml }
-    - { resource: services/listeners.yml }
-    - { resource: services/repositories.yml }
-    - { resource: services/voters.yml }
-    - { resource: simplebus/command.field.yml }
-    - { resource: simplebus/command.group.yml }
-    - { resource: simplebus/command.project.yml }
-    - { resource: simplebus/command.state.yml }
-    - { resource: simplebus/command.template.yml }
-    - { resource: simplebus/command.user.yml }
-    - { resource: simplebus/middleware.yml }
+    - { resource: services/ }
+    - { resource: simplebus/ }
 
 services:
 
