--- a/app/config/services/repositories.yml
+++ b/app/config/services/repositories.yml
@@ -11,6 +11,11 @@ services:
         factory: [ "@doctrine.orm.default_entity_manager", "getRepository" ]
         arguments: [ eTraxis\Entity\Event ]
 
+    etraxis.repository.field_values:
+        class: Doctrine\ORM\EntityRepository
+        factory: [ "@doctrine.orm.default_entity_manager", "getRepository" ]
+        arguments: [ eTraxis\Entity\FieldValue ]
+
     etraxis.repository.groups:
         class: Doctrine\ORM\EntityRepository
         factory: [ "@doctrine.orm.default_entity_manager", "getRepository" ]
