--- a/app/config/services/listeners.yml
+++ b/app/config/services/listeners.yml
@@ -14,6 +14,7 @@ services:
         arguments:
             - "@router"
             - "@translator"
+            - "@security.authentication_utils"
             - "@security.authorization_checker"
             - "@security.token_storage"
             - "%locale%"
