--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
     "license": "GPL-3.0",
     "dependencies": {
         "normalize.css": "3.0.3",
+        "unsemantic": "1.0.3",
         "html5shiv": "3.7.3",
         "jquery": "2.1.4",
         "jquery.ui": "1.11.4",
