The filter to skip fields marked as deleted

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -58,14 +58,18 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore
         mappings:
             model:
-                type: annotation
-                dir: "%kernel.root_dir%/../src/eTraxis/Entity"
-                prefix: eTraxis\Entity
-                alias: eTraxis
+                type:      annotation
+                dir:       "%kernel.root_dir%/../src/eTraxis/Entity"
+                prefix:    eTraxis\Entity
+                alias:     eTraxis
                 is_bundle: false
         dql:
             string_functions:
                 EPOCH_DATE: eTraxis\Doctrine\EpochDateFunction
+        filters:
+            filter.fields:
+                class:   eTraxis\Doctrine\FieldsFilter
+                enabled: true
 
 # Swiftmailer Configuration
 swiftmailer:
