Upgrade SwiftmailerBundle to 2.3.11

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -31,6 +31,10 @@ monolog:
         #    type:   chromephp
         #    level:  info
 
+swiftmailer:
+    delivery_addresses:
+        - "%delivery_address%"
+
 command_bus:
     logging: ~
 
