--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -12,6 +12,7 @@ parameters:
     mailer_host:            127.0.0.1
     mailer_user:            ~
     mailer_password:        ~
+    delivery_address:       ~
 
     mailfrom_address:       noreply@example.com
     mailfrom_name:          "eTraxis Support"
