--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -32,8 +32,7 @@ monolog:
         #    level:  info
 
 swiftmailer:
-    delivery_addresses:
-        - "%delivery_address%"
+    delivery_addresses: "%delivery_addresses%"
 
 command_bus:
     logging: ~
