--- a/app/config/services/repositories.yml
+++ b/app/config/services/repositories.yml
@@ -36,6 +36,11 @@ services:
         factory: [ "@doctrine.orm.default_entity_manager", "getRepository" ]
         arguments: [ eTraxis\Entity\StringValue ]
 
+    etraxis.repository.templates:
+        class: Doctrine\ORM\EntityRepository
+        factory: [ "@doctrine.orm.default_entity_manager", "getRepository" ]
+        arguments: [ eTraxis\Entity\Template ]
+
     etraxis.repository.text_values:
         class: Doctrine\ORM\EntityRepository
         factory: [ "@doctrine.orm.default_entity_manager", "getRepository" ]
