--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-/app/cache/
-/app/logs/
 /app/config/parameters.yml
 /app/SymfonyRequirements.php
 /app/bootstrap.php.cache
 /app/check.php
 /bin/
+!/bin/console
 /node_modules/
+/var/
 /vendor/
 /web/bundles/
 /web/css/
