--- a/app/config/services/listeners.yml
+++ b/app/config/services/listeners.yml
@@ -17,6 +17,7 @@ services:
             - "@security.authentication_utils"
             - "@security.authorization_checker"
             - "@security.token_storage"
+            - "%locale%"
 
     etraxis.listener.security:
         class: AppBundle\EventListener\SecurityListener
