Upgrade Symfony to 3.0.2

--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,11 @@
         }
     },
     "minimum-stability": "stable",
+    "config": {
+        "platform": {
+            "php": "5.5.9"
+        }
+    },
     "scripts": {
         "post-install-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
