--- a/composer.json
+++ b/composer.json
@@ -4,32 +4,33 @@
     "type": "project",
     "license": "GPL-3.0",
     "require": {
-        "php"                                  : "~5.5|~7.0",
+        "php"                                  : ">=5.5.9",
         "ext-bcmath"                           : "*",
         "ext-ctype"                            : "*",
         "ext-iconv"                            : "*",
         "ext-mbstring"                         : "*",
-        "symfony/symfony"                      : "~3.0",
-        "doctrine/orm"                         : "~2.5",
-        "doctrine/doctrine-bundle"             : "~1.6",
-        "doctrine/doctrine-cache-bundle"       : "~1.2",
-        "doctrine/doctrine-fixtures-bundle"    : "~2.3",
-        "doctrine/doctrine-migrations-bundle"  : "~1.1",
-        "doctrine/migrations"                  : "~1.2",
-        "symfony/swiftmailer-bundle"           : "~2.3",
-        "symfony/monolog-bundle"               : "~2.8",
-        "sensio/distribution-bundle"           : "~5.0",
-        "sensio/framework-extra-bundle"        : "~3.0",
-        "incenteev/composer-parameter-handler" : "~2.0",
-        "simple-bus/symfony-bridge"            : "~4.1",
-        "ramsey/uuid"                          : "~3.0",
-        "etraxis/datatables-bundle"            : "~1.0"
+        "symfony/symfony"                      : "3.0.*",
+        "doctrine/orm"                         : "^2.5",
+        "doctrine/doctrine-bundle"             : "^1.6",
+        "doctrine/doctrine-cache-bundle"       : "^1.2",
+        "doctrine/doctrine-fixtures-bundle"    : "^2.3",
+        "doctrine/doctrine-migrations-bundle"  : "^1.1",
+        "doctrine/migrations"                  : "^1.2",
+        "symfony/swiftmailer-bundle"           : "^2.3",
+        "symfony/monolog-bundle"               : "^2.8",
+        "sensio/distribution-bundle"           : "^5.0",
+        "sensio/framework-extra-bundle"        : "^3.0.2",
+        "incenteev/composer-parameter-handler" : "^2.0",
+        "simple-bus/symfony-bridge"            : "^4.1",
+        "ramsey/uuid"                          : "^3.0",
+        "etraxis/datatables-bundle"            : "^1.0"
     },
     "require-dev": {
-        "sensio/generator-bundle"              : "~3.0",
-        "symfony/phpunit-bridge"               : "~3.0",
-        "phpunit/phpunit"                      : "~5.0",
-        "fabpot/php-cs-fixer"                  : "~1.11"
+        "php"                                  : ">=5.6",
+        "sensio/generator-bundle"              : "^3.0",
+        "symfony/phpunit-bridge"               : "^3.0",
+        "phpunit/phpunit"                      : "^5.0",
+        "fabpot/php-cs-fixer"                  : "^1.11"
     },
     "autoload": {
         "psr-4": {
@@ -46,11 +47,6 @@
         }
     },
     "minimum-stability": "stable",
-    "config": {
-        "platform": {
-            "php": "5.5.9"
-        }
-    },
     "scripts": {
         "post-install-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
