--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -10,6 +10,8 @@ parameters:
 
     mailer_transport:       smtp
     mailer_host:            127.0.0.1
+    mailer_port:            false
+    mailer_encryption:      ~
     mailer_user:            ~
     mailer_password:        ~
     delivery_addresses:     ~
