--- a/composer.json
+++ b/composer.json
@@ -32,10 +32,9 @@
         "etraxis/datatables-bundle"            : "^1.0"
     },
     "require-dev": {
-        "php"                                  : ">=5.6",
         "sensio/generator-bundle"              : "^3.0",
         "symfony/phpunit-bridge"               : "^3.0",
-        "phpunit/phpunit"                      : "^5.0",
+        "phpunit/phpunit"                      : "^4.1",
         "fabpot/php-cs-fixer"                  : "^1.11"
     },
     "autoload": {
@@ -75,6 +74,11 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget",
             "eTraxis\\Composer\\ScriptHandler::updateAssets"
         ]
+    },
+    "config": {
+        "platform": {
+            "php": "5.5.9"
+        }
     },
     "extra": {
         "symfony-app-dir": "app",
