--- a/app/config/simplebus/command.project.yml
+++ b/app/config/simplebus/command.project.yml
@@ -3,12 +3,12 @@ services:
     command.project.create:
         class: eTraxis\SimpleBus\Projects\Handler\CreateProjectCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Projects\CreateProjectCommand }]
-        arguments: [ "@logger", "@validator", "@translator", "@doctrine" ]
+        arguments: [ "@logger", "@validator", "@doctrine" ]
 
     command.project.update:
         class: eTraxis\SimpleBus\Projects\Handler\UpdateProjectCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Projects\UpdateProjectCommand }]
-        arguments: [ "@logger", "@validator", "@translator", "@doctrine" ]
+        arguments: [ "@logger", "@validator", "@doctrine" ]
 
     command.project.delete:
         class: eTraxis\SimpleBus\Projects\Handler\DeleteProjectCommandHandler
