--- a/app/config/simplebus/command.state.yml
+++ b/app/config/simplebus/command.state.yml
@@ -3,12 +3,12 @@ services:
     command.state.create:
         class: eTraxis\SimpleBus\States\Handler\CreateStateCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\States\CreateStateCommand }]
-        arguments: [ "@logger", "@validator", "@translator", "@doctrine" ]
+        arguments: [ "@logger", "@validator", "@doctrine" ]
 
     command.state.update:
         class: eTraxis\SimpleBus\States\Handler\UpdateStateCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\States\UpdateStateCommand }]
-        arguments: [ "@logger", "@validator", "@translator", "@doctrine" ]
+        arguments: [ "@logger", "@validator", "@doctrine" ]
 
     command.state.delete:
         class: eTraxis\SimpleBus\States\Handler\DeleteStateCommandHandler
