--- a/app/config/simplebus/command.field.yml
+++ b/app/config/simplebus/command.field.yml
@@ -3,92 +3,92 @@ services:
     command.field.create.number:
         class: eTraxis\SimpleBus\Fields\Handler\NumberFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\CreateNumberFieldCommand }]
-        arguments: [ "@logger", "@validator", "@translator", "@doctrine" ]
+        arguments: [ "@logger", "@validator", "@doctrine", "@translator" ]
 
     command.field.create.string:
         class: eTraxis\SimpleBus\Fields\Handler\StringFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\CreateStringFieldCommand }]
-        arguments: [ "@logger", "@validator", "@translator", "@doctrine", "@etraxis.repository.string_values" ]
+        arguments: [ "@logger", "@validator", "@doctrine", "@etraxis.repository.string_values" ]
 
     command.field.create.text:
         class: eTraxis\SimpleBus\Fields\Handler\TextFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\CreateTextFieldCommand }]
-        arguments: [ "@logger", "@validator", "@translator", "@doctrine", "@etraxis.repository.text_values" ]
+        arguments: [ "@logger", "@validator", "@doctrine", "@etraxis.repository.text_values" ]
 
     command.field.create.checkbox:
         class: eTraxis\SimpleBus\Fields\Handler\CheckboxFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\CreateCheckboxFieldCommand }]
-        arguments: [ "@logger", "@validator", "@translator", "@doctrine" ]
+        arguments: [ "@logger", "@validator", "@doctrine" ]
 
     command.field.create.list:
         class: eTraxis\SimpleBus\Fields\Handler\ListFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\CreateListFieldCommand }]
-        arguments: [ "@logger", "@validator", "@translator", "@doctrine" ]
+        arguments: [ "@logger", "@validator", "@doctrine" ]
 
     command.field.create.record:
         class: eTraxis\SimpleBus\Fields\Handler\RecordFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\CreateRecordFieldCommand }]
-        arguments: [ "@logger", "@validator", "@translator", "@doctrine" ]
+        arguments: [ "@logger", "@validator", "@doctrine" ]
 
     command.field.create.date:
         class: eTraxis\SimpleBus\Fields\Handler\DateFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\CreateDateFieldCommand }]
-        arguments: [ "@logger", "@validator", "@translator", "@doctrine" ]
+        arguments: [ "@logger", "@validator", "@doctrine", "@translator" ]
 
     command.field.create.duration:
         class: eTraxis\SimpleBus\Fields\Handler\DurationFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\CreateDurationFieldCommand }]
-        arguments: [ "@logger", "@validator", "@translator", "@doctrine" ]
+        arguments: [ "@logger", "@validator", "@doctrine", "@translator" ]
 
     command.field.create.decimal:
         class: eTraxis\SimpleBus\Fields\Handler\DecimalFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\CreateDecimalFieldCommand }]
-        arguments: [ "@logger", "@validator", "@translator", "@doctrine", "@etraxis.repository.decimal_values" ]
+        arguments: [ "@logger", "@validator", "@doctrine", "@translator", "@etraxis.repository.decimal_values" ]
 
     command.field.update.number:
         class: eTraxis\SimpleBus\Fields\Handler\NumberFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\UpdateNumberFieldCommand }]
-        arguments: [ "@logger", "@validator", "@translator", "@doctrine" ]
+        arguments: [ "@logger", "@validator", "@doctrine", "@translator" ]
 
     command.field.update.string:
         class: eTraxis\SimpleBus\Fields\Handler\StringFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\UpdateStringFieldCommand }]
-        arguments: [ "@logger", "@validator", "@translator", "@doctrine", "@etraxis.repository.string_values" ]
+        arguments: [ "@logger", "@validator", "@doctrine", "@etraxis.repository.string_values" ]
 
     command.field.update.text:
         class: eTraxis\SimpleBus\Fields\Handler\TextFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\UpdateTextFieldCommand }]
-        arguments: [ "@logger", "@validator", "@translator", "@doctrine", "@etraxis.repository.text_values" ]
+        arguments: [ "@logger", "@validator", "@doctrine", "@etraxis.repository.text_values" ]
 
     command.field.update.checkbox:
         class: eTraxis\SimpleBus\Fields\Handler\CheckboxFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\UpdateCheckboxFieldCommand }]
-        arguments: [ "@logger", "@validator", "@translator", "@doctrine" ]
+        arguments: [ "@logger", "@validator", "@doctrine" ]
 
     command.field.update.record:
         class: eTraxis\SimpleBus\Fields\Handler\RecordFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\UpdateRecordFieldCommand }]
-        arguments: [ "@logger", "@validator", "@translator", "@doctrine" ]
+        arguments: [ "@logger", "@validator", "@doctrine" ]
 
     command.field.update.list:
         class: eTraxis\SimpleBus\Fields\Handler\ListFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\UpdateListFieldCommand }]
-        arguments: [ "@logger", "@validator", "@translator", "@doctrine" ]
+        arguments: [ "@logger", "@validator", "@doctrine" ]
 
     command.field.update.date:
         class: eTraxis\SimpleBus\Fields\Handler\DateFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\UpdateDateFieldCommand }]
-        arguments: [ "@logger", "@validator", "@translator", "@doctrine" ]
+        arguments: [ "@logger", "@validator", "@doctrine", "@translator" ]
 
     command.field.update.duration:
         class: eTraxis\SimpleBus\Fields\Handler\DurationFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\UpdateDurationFieldCommand }]
-        arguments: [ "@logger", "@validator", "@translator", "@doctrine" ]
+        arguments: [ "@logger", "@validator", "@doctrine", "@translator" ]
 
     command.field.update.decimal:
         class: eTraxis\SimpleBus\Fields\Handler\DecimalFieldCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Fields\UpdateDecimalFieldCommand }]
-        arguments: [ "@logger", "@validator", "@translator", "@doctrine", "@etraxis.repository.decimal_values" ]
+        arguments: [ "@logger", "@validator", "@doctrine", "@translator", "@etraxis.repository.decimal_values" ]
 
     command.field.delete:
         class: eTraxis\SimpleBus\Fields\Handler\DeleteFieldCommandHandler
