--- a/app/config/simplebus/command.group.yml
+++ b/app/config/simplebus/command.group.yml
@@ -3,12 +3,12 @@ services:
     command.group.create:
         class: eTraxis\SimpleBus\Groups\Handler\CreateGroupCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Groups\CreateGroupCommand }]
-        arguments: [ "@logger", "@validator", "@translator", "@doctrine" ]
+        arguments: [ "@logger", "@validator", "@doctrine" ]
 
     command.group.update:
         class: eTraxis\SimpleBus\Groups\Handler\UpdateGroupCommandHandler
         tags: [{ name: command_handler, handles: eTraxis\SimpleBus\Groups\UpdateGroupCommand }]
-        arguments: [ "@logger", "@validator", "@translator", "@doctrine" ]
+        arguments: [ "@logger", "@validator", "@doctrine" ]
 
     command.group.delete:
         class: eTraxis\SimpleBus\Groups\Handler\DeleteGroupCommandHandler
