--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "ext-ctype"                            : "*",
         "ext-iconv"                            : "*",
         "ext-mbstring"                         : "*",
+        "ext-pcre"                             : "*",
         "symfony/symfony"                      : "3.0.*",
         "doctrine/orm"                         : "^2.5",
         "doctrine/doctrine-bundle"             : "^1.6",
