SimpleBus extra bundle

--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "incenteev/composer-parameter-handler" : "^2.0",
         "simple-bus/symfony-bridge"            : "^4.1",
         "ramsey/uuid"                          : "^3.0",
+        "arodygin/simplebus-bundle"            : "^1.0",
         "arodygin/datatables-bundle"           : "^1.2"
     },
     "require-dev": {
